--- a/CSS/style.css
+++ b/CSS/style.css
@@ -38,6 +38,15 @@ nav a {
     text-transform: uppercase;
 }
 
+h2 {
+    font-size: 4rem;
+    margin: 7.2rem;
+}
+
+h3 {
+    font-size: 3.2rem;
+}
+
 /*Estilo dos Container*/
 
 .wrapperContainer-dark {
@@ -138,6 +147,74 @@ h1 {
 }
 
 .header_content .btn:hover {
+
+    background-color: black;
+    color: var(--primary-color);
+    box-shadow: 0px 0px 0px 0px;
+    scale: 1.2;
+    border-radius: 81px;
+}
+
+
+.cursos {
+    text-align: center;
+}
+
+.cursosContainer {
+    display: flex;
+    text-align: left;
+    gap: 2rem;
+
+}
+
+.curso_card h3 {
+    font-size: 2.4rem;
+    margin: 2rem 0;
+
+}
+
+.curso_card p {
+    font-size: 1.8rem;
+    line-height: 1.5;
+    text-align: center;
+    text-align: justify;
+}
+
+.curso_card {
+
+    flex: 1;
+
+}
+
+.curso_card img {
+    display: block;
+    width: 100%;
+}
+
+.cursos_card_content {
+    padding: 1rem 1.25rem;
+    border: 1px solid #949494;
+    border-radius: 0 0 8px 8px;
+    border-top: transparent;
+}
+
+
+.wrapperContainer-light .btn {
+    background-color: var(--primary-color);
+    border-radius: 4px;
+    font-size: 1.8rem;
+    text-decoration: none;
+    padding: 1.6rem 10rem;
+    font-family: 'Mukta', sans-serif;
+    box-shadow: 0px 1px 20px 1px rgb(39, 38, 38);
+    color: black;
+    display: inline-block;
+    transition: 1.2s;
+    font-weight: 500;
+    margin: 7.2rem;
+}
+
+.wrapperContainer-light .btn:hover {
 
     background-color: black;
     color: var(--primary-color);
